Resumen ADR - Final

--- a/0.Universidad/4to Año/2.TACS/Practica/2024 - 2C - B.md
+++ b/0.Universidad/4to Año/2.TACS/Practica/2024 - 2C - B.md
@@ -1,6 +1,19 @@
 ![[Pasted image 20251121160740.webp|900]]
-1. Docker
-	Docker es una herramienta que le permitirá, al area de desarrollo, poder desplegar las aplicaciones de una manera mucho más segura y ágil. Esta misma puede (y debería) ser implementada por todo tipo de equipos, independientemente del stack tecnologico que implementen  
-
-	A la hora de que los equipos de desarrollo despliegan sus aplicativos, en muchas ocasiones, estos se encuentran con grandes problemas, como los pueden ser: Errores por compatibilidad con el ambiente de despliegue, elevado tiempo de overhead y complejidad en el manejo de multiples instancias del aplicativo, entre otros. Todo esto se resumen en tiempo que los equipos están empleando en actividades que no suman valor al producto y no en el desarrollo de nuevas funcionalidades.  
-	Para solucionar esto, existen herramientas que facilitan y agilizan la entrega de nuevas versiones 
+5. Cloud
+	La infraestructura Cloud permite una gran flexibilidad con respecto a las caracteristicas técnicas de la solución que deseo implementar en función de las demandas estructurales de mi aplicativo. Esto hace referencia a cuestiones como: El tipo de servicio contratado (IaaS, PaaS, SaaS, entre otros); La capacidad de escalar libremente (dependendiendo del tipo de servicio contratado); Ignorar cuestiones técnicas de infraestructura como la red (conectividad, velocidad y seguridad), almacenamiento (espacio es disco, backups, etc.), capacidad de procesamiento (uno simplemente contrata el servicio y la empresa contratada garantiza cierto nivel de rendimiento), seguridad. 
+	Ademá de esto, le permitirica a la empresa poder entregar la solución con una menor inversión inicial y de forma más rápida, gracias a que no es necesario comprar los componentes de infraestructura, si no que son "alquilados". 
+6. NoSQL
+	1. Que volumen y que tipo de datos manejara la aplicación? 
+			Si se espera guardar estructuras de datos complejas, podría resultar más cómodo trabajar con BD NoSQL. Del mismo modo, las NoSQL poseen mayor flexibilidad para escalar, por lo que pueden soportar un flujo mucha mayor de datos.
+	2. En cuento costo icurriría la organización en caso de tener inconsistencia en los datos? 
+			Las BD relacionales son las que proveen la mayor seguridad ante inconsistencias, gracias a sus propiedades ACID. 
+	3. Cuales son las capacidades actuales del grupo con respecto al manejo de BD? 
+			Muchas veces es mejor tener un buen manejo de BD relacional antes de un mal manejo de la BD más apropiada NoSQL.
+7. SRE
+	Para la buena experiencia del usuario, es necesario poder asegurarle cierto nivel de fiabilidad (disponibilidad, depempeño y resiliencia) por parte de nuestro sistema. Por este motivo, sería de gran utilidad contar con un equipo de SRE, el cual se encargará de desarrollar e implementar métodologías de trabajo (frecuencia de deploy, automatización, monitoreo, gestión de incidentes) para los diferentes componentes del sistema. 
+	Esto tiene el objetivo de poder reducir el down time de la aplicación al minimo indispensable y mantener la confianza dle usuario. Tambien se encargará de realizar mediciones constantes ante las métricas pertinentes (como, por ejemplo, el downtime, error budget, TTM, entre otros), con las que adaptará las metodologías de trabajo para ajustarse al estado del sistema. 
+8. Monitoreo
+	Las herramientas de monitoreo permiten observar como los componentes de infraestructura (CPU, memoria, disco, red, entre otros) se comportan frente a la exigencia de la aplicación. Con las métricas obtenidas de estas fuentes (como lo pueden ser: TTD y TTM), se podrán identificar con facilidad los puntos de mejora o aquellos en donde el flujo no sigue los pasos esperados. Esto le permitirá a los equipos poder planificar y desarrollar soluciones mucho más específicas, ya que, el problema es facilmente identificable.
+9. Docker
+	Actualmente los equipos de desarrollo incurren en muchos errores y tiempo empleado en lo que respecta el despliegue, mantenimiento y gestión de los aplicativos desarrollados. Todo esto genera un gran costo para la empresa, ya que, estas actividades no generan un valor agregado a la solución, como si lo sería el desarrollo de nuevas funcionalidades. 
+	Por esto mismo, sería conveniente que estos equipos comiencen a implementar herramientas como Docker, la cual le otorgara al equipo mayor control y flexibilidad sobre la infraestructura, así como abrir las puertas a nuevas metodologías de trabajo más robustas y flexibles, las cuales los equipos pueden aprovechar para concentrar sus recursos en actividades que generen valor. 
