--- a/4.Ingles/Practice/First Trainer/T4.md
+++ b/4.Ingles/Practice/First Trainer/T4.md
@@ -32,7 +32,6 @@
 28. **used to annoy me**  (chequear)
 29. thanked everybody for making his
 30. was desperate to win
-
 # P6
 37. D
 38. E
@@ -40,3 +39,38 @@
 40. C
 41. A - B
 42. F
+# Listening
+## P1
+1. B 
+2. A
+3. C
+4. B
+5. A
+6. C
+7. C
+8. C - B
+## P2
+9. documentary 
+10. ice
+11. tree
+12. 1000 mts - rain fall
+13. hand picked
+14. temperature
+15. honey
+16. instant
+17. energy 
+18. ceremony
+## P3
+19. B
+20. D
+21. G
+22. H
+23. F
+## P4
+24. B
+25. B
+26. C
+27. B - A
+28. C
+29. C
+30. A
