Practica final adr

--- a/0.Universidad/4to Año/4.ADR/Final/1.Planificación recursos/4.EVM.md
+++ b/0.Universidad/4to Año/4.ADR/Final/1.Planificación recursos/4.EVM.md
@@ -5,6 +5,9 @@
 | Costo real                                       | AC                       | Costo real de lo construido hasta el momento              |
 | Valor Ganado                                     | EV                       | Aumento de valor del proyecto                             |
 | ----                                             |                          |                                                           |
+| Variación de Costo                               | $CV = EV-AC$             |                                                           |
+| Variación Cronograma                             | $SV = EV-PV$             |                                                           |
+| ----                                             |                          |                                                           |
 | Presupuesto del proyecto                         | BAC                      |                                                           |
 | Estimación para finalizar                        | ETC                      | Cuanto me falta para terminar                             |
 | Estimado a la conclusión                         | $EAC=AC+ETC=BAC/CPI$     | Estimación del total del proyecto desde donde estoy ahora |
